--- a/ui/src/app.html
+++ b/ui/src/app.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-base-100 scroll-smooth">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/app-logo-icon.png" />
+		<link rel="icon" href="%sveltekit.assets%/logos/app-logo-icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
